# ansible_k8s

./: .gitignore  Questions.md  README.md  cluster.init.yaml  kubeadm.md  prepare.plays.yaml  pyproject.toml
plays/: firewall.plays.yaml  install.plays.yaml  prepare.plays.yaml
