[project]
name = "ansible-k8s"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ansible>=6.7.0",
    "ansible-lint>=6.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"


[tool.hatch.metadata]
allow-direct-references = true

